# Othello_practicaPoo

./: CMakeLists.txt  logica.cpp  logica.h  main.cpp  tablero.cpp  tablero.h
